--- a/conflict_neg.bib
+++ b/conflict_neg.bib
@@ -17,3 +17,34 @@
 	editor = {{Harvard Law School}},
 	year = {2008}
 }
+
+@misc{magic_markers_como_2018,
+	title = {¿{Cómo} negociar bien?},
+	url = {https://www.youtube.com/watch?v=CnF26cfIfQM&t=173s},
+	language = {Spanish},
+	urldate = {2020-09-23},
+	author = {{Magic Markers}},
+	year = {2018}
+}
+
+@techreport{program_of_negotiation_batna_2012,
+	title = {{BATNA} {Basics}: {Boost} {Your} {Power} at the {Bargaining} {Table}},
+	url = {https://www.bc.edu/content/dam/files/centers/cwf/individuals/pdf/BANTABasics.pdf},
+	language = {English},
+	author = {{Program of Negotiation}},
+	year = {2012},
+	pages = {8}
+}
+
+@misc{spangler_creating_2003,
+	title = {Creating and {Claiming} {Value}},
+	url = {https://www.beyondintractability.org/essay/creating_value},
+	language = {English},
+	urldate = {2020-09-23},
+	publisher = {Conflict Information Consortium, University of Colorado, Boulder},
+	author = {Spangler, Brad},
+	month = sep,
+	year = {2003},
+	note = {Last Modified: 2017-02-28T14:57-07:00},
+	file = {Snapshot:/home/luifrancgom/Zotero/storage/X9FM2BRV/creating-value.html:text/html}
+}
