--- a/conflict_neg.bib
+++ b/conflict_neg.bib
@@ -48,3 +48,13 @@
 	note = {Last Modified: 2017-02-28T14:57-07:00},
 	file = {Snapshot:/home/luifrancgom/Zotero/storage/X9FM2BRV/creating-value.html:text/html}
 }
+
+@book{muthoo_bargaining_1999,
+	address = {New York},
+	title = {Bargaining theory with applications},
+	isbn = {978-0-521-57225-5 978-0-521-57647-5},
+	publisher = {Cambridge University Press},
+	author = {Muthoo, Abhinay},
+	year = {1999},
+	keywords = {Game theory, Negotiation in business}
+}
