--- a/conflict_neg.bib
+++ b/conflict_neg.bib
@@ -10,10 +10,10 @@
 	keywords = {Negotiation, Negotiation in business}
 }
 
-@misc{program_of_negotiation_three_2008,
+@misc{program_on_negotiation_three_2008,
 	title = {Three {Party} {Coalition} {Exercise} - {Game} {Theory} and {Negotiation} {Analytics} {Role}-{Play}},
 	language = {English},
-	author = {{Program of Negotiation}},
+	author = {{Program on Negotiation}},
 	editor = {{Harvard Law School}},
 	year = {2008}
 }
@@ -56,5 +56,16 @@
 	publisher = {Cambridge University Press},
 	author = {Muthoo, Abhinay},
 	year = {1999},
-	keywords = {Game theory, Negotiation in business}
+	keywords = {Negotiation in business, Game theory}
+}
+
+@misc{program_on_negotiation_negotiation_2014,
+	title = {Negotiation {Role}-{Play}: {Three}-{Party} {Coalition} {Exercise} - {Game} {Theory} \& {Negotiation} {Analytics}},
+	shorttitle = {Negotiation {Role}-{Play}},
+	url = {https://www.youtube.com/watch?v=O2d6XuDm-ok&feature=emb_title},
+	language = {English},
+	urldate = {2020-10-05},
+	author = {{Program on Negotiation}},
+	month = dec,
+	year = {2014}
 }
