--- a/conflict_neg.bib
+++ b/conflict_neg.bib
@@ -263,3 +263,25 @@
 	pages = {1413--1432},
 	file = {Submitted Version:/home/luifrancgom/Zotero/storage/7TRG3UHX/Dimara et al. - 2020 - A Task-Based Taxonomy of Cognitive Biases for Info.pdf:application/pdf}
 }
+
+@misc{pon_staff_negotiation_2020,
+	title = {Negotiation {Skills} for {Win}-{Win} {Negotiations}},
+	url = {https://www.pon.harvard.edu/daily/negotiation-skills-daily/listening-skills-for-maximum-success/},
+	language = {English},
+	urldate = {2020-10-27},
+	journal = {PON - Program on Negotiation at Harvard Law School},
+	author = {{PON Staff}},
+	month = oct,
+	year = {2020},
+	note = {Section: Negotiation Skills},
+	file = {Snapshot:/home/luifrancgom/Zotero/storage/3M9E4SD3/listening-skills-for-maximum-success.html:text/html}
+}
+
+@book{rogers_active_2015,
+	title = {Active listening},
+	isbn = {978-1-61427-872-6},
+	language = {English},
+	author = {Rogers, Carl R and Farson, Richard Evans},
+	year = {2015},
+	note = {OCLC: 1050955193}
+}
