--- a/006_commu.Rmd
+++ b/006_commu.Rmd
@@ -82,7 +82,7 @@ Explore the tools and practices to improve communication processes in a negotiat
     
 - Before taking part, students should review the instructions of the Midterm Exam that can be checked at:
 
-    + Primer corte 30% > Learning Activities > Midterm Exam Three Party Coalition Exercise Round 1
+    + Segundo corte 30% > Learning Activities > Midterm Exam Three Party Coalition Exercise Round 2
     
 - Also check out in the __Links of interest__ the video
     
