--- a/conflict_neg.bib
+++ b/conflict_neg.bib
@@ -281,7 +281,45 @@
 	title = {Active listening},
 	isbn = {978-1-61427-872-6},
 	language = {English},
+	publisher = {Martino Publishing},
 	author = {Rogers, Carl R and Farson, Richard Evans},
 	year = {2015},
 	note = {OCLC: 1050955193}
+}
+
+@incollection{coleman_power_2014,
+	edition = {3},
+	title = {Power and {Conflict}},
+	isbn = {978-1-118-81032-3},
+	language = {English},
+	booktitle = {The {Handbook} of {Conflict} {Resolution}: {Theory} and {Practice}},
+	publisher = {Jossey-Bass},
+	author = {Coleman, Peter T.},
+	year = {2014},
+	pages = {137--181}
+}
+
+@article{lewicki_ethical_1998,
+	title = {Ethical and {Unethical} {Bargaining} {Tactics}: {An} {Empirical} {Study}},
+	volume = {18},
+	issn = {01674544},
+	url = {http://link.springer.com/10.1023/A:1005719122519},
+	doi = {10.1023/A:1005719122519},
+	number = {2},
+	urldate = {2020-10-31},
+	journal = {Journal of Business Ethics},
+	author = {Lewicki, Roy J. and Robinson, Robert J.},
+	year = {1998},
+	pages = {211--228}
+}
+
+@article{adler_negotiating_2007,
+	title = {Negotiating with liars},
+	volume = {48},
+	language = {English},
+	number = {4},
+	journal = {MIT Sloan Management Review},
+	author = {Adler, Robert S.},
+	year = {2007},
+	pages = {69--79}
 }
