--- a/009_best_practices.Rmd
+++ b/009_best_practices.Rmd
@@ -71,7 +71,8 @@ Explore best practices in negotiation and conflict management to achieve success
 
 # Final Exam Three Party Coalition Exercise Modified
 
-- Why the Final Exam using BlackBoard Collaborate and with the participation of the entire course?
+
+- Why the Final Exam is a simulations and with the participation of the entire course?
 
     + The negotiation of conflicts is generated between individuals or groups and one way of learning is precisely by negotiating with other people. 
     
@@ -91,8 +92,7 @@ Explore best practices in negotiation and conflict management to achieve success
     
 # Final Exam Three Party Coalition Exercise Modified
 
-- Before the Midterm Exam begins each student of the group, that has been formed, will be randomly assigned to one and only one role as a negotiator of an organization. If there is a group of 4 students, then a
-role will be played by 2 students. The respective roles are:
+- Before the Final Exam begins each student of the group, that has been formed, will be randomly assigned to one and only one role as a negotiator of an organization. The respective roles are:
 
     + __Group A__
     + __Group B__
